plugins {
    // Apply the java-library plugin for API and implementation separation.
    id 'java-library'
    id 'application'
    id 'eclipse'
    id 'org.openjfx.javafxplugin' version '0.1.0'
}

repositories {
    // Use Maven Central for resolving dependencies.
    mavenCentral()
}

javafx {
    version = '21'
    modules = [ 'javafx.controls', 'javafx.fxml', 'javafx.swing']
}

dependencies {
	implementation 'io.github.mkpaz:atlantafx-base:2.0.1'
	implementation 'org.kordamp.ikonli:ikonli-core:12.3.1'
	implementation 'org.kordamp.ikonli:ikonli-javafx:12.3.1'
	implementation 'org.kordamp.ikonli:ikonli-material2-pack:12.3.1'
}

// Apply a specific Java toolchain to ease working on different environments.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(19)
    }
}

ext {
   	// Main class (for manifest entry)
	mainModule = 'RRG'
	mainClassName = 'com.bm.rrgfx.RRG'
}
application {
	mainModule = project.mainModule // name defined in module-info.java
	mainClass = project.mainClassName// mainClass is mandatory

	//applicationDefaultJvmArgs =  ["--add-exports", "javafx.base/com.sun.javafx.event=org.controlsfx.controls"]
}